--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Java template
+### Java fileTemplate
 # Compiled class file
 *.class
 
@@ -24,7 +24,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### macOS template
+### macOS fileTemplate
 # General
 .DS_Store
 .AppleDouble
@@ -52,8 +52,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### Example user template template
-### Example user template
+### Example user fileTemplate fileTemplate
+### Example user fileTemplate
 
 # IntelliJ project files
 .idea
